fix constructor bug, align #scaling items

--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ main {
     grid-area: b;
 }
 
-#scaling div {
+#scaling > div {
     display: flex;
     flex-direction: column;
 }
 
 main > div > div > *, main > div > div > * {
-    display: inline-block;
+    display: flex;
 }
